# untitled3

./: CMakeLists.txt  Lista.cpp  Lista.h  ListaObserver.cpp  ListaObserver.h  ListaObserverTest.cpp  ListaTest.cpp  Observer.h  Oggetto.cpp  Oggetto.h  OggettoTest.cpp  Subject.h  Utente.cpp  Utente.h  UtenteTest.cpp  main.cpp
